fix scroll events by removing overflow

--- a/client/css/base.styl
+++ b/client/css/base.styl
@@ -9,6 +9,10 @@ body {
     padding: 0;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 html,
 body,
 .app {
@@ -28,13 +32,18 @@ ul li {
     list-style: none;
 }
 
+pre {
+    max-width: 100%;
+}
+
 pre code {
     font-size: 13px;
 }
 
 input {
+    font-size: 13px;
     min-width: 300px;
-    padding: 10px;
+    padding: 10px 0;
 }
 
 button {
