--- a/client/css/builds.styl
+++ b/client/css/builds.styl
@@ -13,7 +13,7 @@
     border: 1px solid $gray;
     border-radius: 2px;
     display: flex;
-    height: 99px;
+    height: 98px;
     justify-content: center;
     margin: 5px;
     transition: background .1s;
