--- a/client/css/landing.styl
+++ b/client/css/landing.styl
@@ -66,6 +66,9 @@
     h3 {
         width: 100%;
     }
+    > div {
+        max-width: 100%;
+    }
 }
 
 .landing-brief-desc {
